--- a/.github/workflows/dependencies_fi.yml
+++ b/.github/workflows/dependencies_fi.yml
@@ -11,6 +11,10 @@ jobs:
       with:
         node-version: '14'
     - name: Install dependencies
-      run: npm ci
+      run: |
+        if [ ! -f package-lock.json ]; then
+          npm install
+        fi
+        npm ci
     - name: Build Docker image
       run: docker build -t my-node-app .
